# AK-4

./: .dockerignore  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  LICENSE  MISSION.md  README.md  TASKS.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.txt
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: feature-matrix.md
services/core-api/: .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt
services/core-api/app/: __init__.py  main.py
services/core-api/app/core/: auth.py  config.py  logging.py
services/core-api/app/db/: base.py  session.py
services/core-api/app/models/: __init__.py  device.py  file.py  file_chunk.py  memory.py  message.py  plan.py  project.py  research.py  session.py  setting.py  task.py  user.py
services/core-api/app/routers/: audio.py  chat.py  files.py  health.py  memory.py  persona.py  plans.py  projects.py  providers.py  remote.py  research.py  settings.py  tasks.py  tools.py
services/core-api/app/schemas/: chat.py  common.py  file.py  memory.py  persona.py  plan.py  provider.py  remote.py  settings.py  task.py
services/core-api/app/services/: chat_service.py  computer_use.py  settings_service.py
services/core-api/app/services/audio/: __init__.py  context.py
services/core-api/app/services/files/: service.py
services/core-api/app/ws/: __init__.py  chat.py  remote.py  status.py
services/core-api/tests/: conftest.py  test_memory.py  test_orchestrator.py  test_phase1.py  test_phase2.py  test_plans.py  test_providers.py  test_settings.py
(+149 files in other folders)
